# LiveStreamProjects

./: .gitignore  README.md
Flask_API_AWS/: README.md  pyproject.toml  wsgi.py
Flask_API_AWS/src/domain/: exceptions.py  model.py  validators.py
Flask_API_AWS/src/entrypoints/api/: app.py  config.py
Flask_API_AWS/src/entrypoints/api/rest/: convert.py
Flask_API_AWS/src/repository/: memrepo.py
Flask_API_AWS/src/requests/: converted_list.py
Flask_API_AWS/src/responses/: responses.py
Flask_API_AWS/src/serializers/: model.py
Flask_API_AWS/src/service/: converters.py  validators.py
Flask_API_AWS/src/use_cases/: converted_list.py
Flask_API_AWS/test/: conftest.py  test_models.py  test_repository.py  test_requests.py  test_responses.py  test_rest.py  test_serializers.py  test_service.py  test_use_cases.py
Flask_API_AWS/test/domain/: test_models.py
Flask_API_AWS/test/entrypoints/: test_rest.py
Flask_API_AWS/test/use_cases/: test_use_cases.py
Project1_Simple_REST_API/: README.md
Project1_Simple_REST_API/Golang_Gorilla/golang_rest_api/: .config  .configtest  config.go  docker-compose.test.yaml  docker-compose.yaml  go.mod  go.sum  main.go
Project1_Simple_REST_API/Golang_Gorilla/golang_rest_api/auth/: token.go
Project1_Simple_REST_API/Golang_Gorilla/golang_rest_api/controllers/: delete.go  errors.go  get.go  login.go  put.go  (+4 more)
Project1_Simple_REST_API/Python_flask/flask_simple_restapi/: .gitignore  README.md  requirements.txt
Project1_Simple_REST_API/RestDjango/django_restframework/: .env  .gitignore  README.md  manage.py  pytest.ini  requirements.txt
(+62 files in other folders)
